# gdrive-mcp-server

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: google-drive-mime-types.md  google-sheets-tools.md  project-structure.md
src/gdrive_mcp_server/: server.py  test_server.py
src/gdrive_mcp_server/resources/: __init__.py  drive.py
src/gdrive_mcp_server/tools/: __init__.py  drive.py  sheets.py
